chore: remove sonar issues